# Pravaah

./: .env.example  .gitignore  Dockerfile  Implementation.md  README.md  Workflow.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy-docs.yml
config/: pravaah.yaml
pravaah/: __init__.py
pravaah-docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
pravaah-docs/docs/: ai-layer.md  architecture.md  crud-engine.md  deployment.md  event-system.md  getting-started.md  intro.mdx  plugin-system.md
pravaah-docs/src/pages/: index.tsx
pravaah/app/: __init__.py  main.py
pravaah/app/ai/: __init__.py  provider.py  router.py  service.py
pravaah/app/core/: __init__.py  config.py  database.py  exceptions.py  registry.py  security.py
pravaah/cli/: __init__.py  main.py
pravaah/plugins/: __init__.py
stitch_pravaah_ai_flow_orchestrator/: ai-workflows.html  index.html  pravaah_project_planning.md  workflow.md
stitch_pravaah_ai_flow_orchestrator/ai_workflows_intelligence_layer/: code.html
stitch_pravaah_ai_flow_orchestrator/control_center_pravaah_dashboard/: code.html
stitch_pravaah_ai_flow_orchestrator/flow_visualizer_event_architecture/: code.html
stitch_pravaah_ai_flow_orchestrator/plugin_registry_modular_architecture/: code.html
stitch_pravaah_ai_flow_orchestrator/pravaah_flow_driven_ai_native_framework/: code.html
stitch_pravaah_ai_flow_orchestrator/pravaah_interactive_experience/: code.html
stitch_pravaah_ai_flow_orchestrator/pravaah_technical_core/: DESIGN.md
tests/: conftest.py  test_api.py  test_crm_plugin.py  verify_phase1.py  verify_phase2.py  verify_phase3.py  verify_phase4.py  verify_phase5.py  verify_phase6.py  verify_phase7.py
(+26 files in other folders)
